[package]
name = "swarm-brood"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Command line tool compilation"
repository = "https://github.com/meta-fs/swarm"
documentation = "https://docs.rs/swarm-brood"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "swarm-overlord"
path = "overlord/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = "0.3.16"

[dependencies.swarm-overlord]
#version = "0.0.0"
path = "../swarm-overlord"

[dependencies.diagnostic-quick]
version = "0.3.4"
features = []

[dev-dependencies]



[features]
default = []
