[package]
name = "swarm-inode"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "Transfer files via ssh protocol."
repository = "https://github.com/meta-fs/swarm"
documentation = "https://docs.rs/swarm-ssh"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]


[dependencies.diagnostic-quick]
version = "0.3.4"
features = ["ssh2"]

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }


[features]
default = []
