[package]
name = "swarm-overlord"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Manage [swarm-drone]()'s life cycle, including creation, operation and deletion."
repository = "https://github.com/meta-fs/swarm"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures = "0.3.17"
find-target = "0.1.0"
pubgrub = "0.2.1"
pathdiff = "0.2.1"
relative-path = "1.7.2"
swarm-ssh = "0.1.0"
#ssh2 = "0.9.3"


[dependencies.diagnostic-quick]
version = "0.3.4"
features = ["ssh2", "url", "mime"]

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }


[features]
default = []
