[package]
name = "swarm-overlord"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Manage [swarm-drone]()'s life cycle, including creation, operation and deletion."
repository = "https://github.com/meta-fs/swarm"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
futures = "0.3.17"
find-target = "0.1.0"
pubgrub = { version = "0.2.1", features = ["serde"] }
pathdiff = "0.2.1"
relative-path = "1.7.2"
swarm-ssh = "0.1.2"
fast_rsync = "0.1.4"
axum = "0.6.1"
sled-typed = "0.0.0"
uuid = "1.2.2"

[dependencies.diagnostic-quick]
version = "0.3.4"
features = ["url", "mime"]

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }


[features]
default = []
